...
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="screen" translatesAutoresizingMaskIntoConstraints="NO" id="hmX-gS-2Tc">
                                        <rect key="frame" x="0.0" y="0.0" width="361" height="512"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="jSn-j7-7sM"/>
                                        </constraints>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UI Components" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QgZ-Oh-YQZ">
                                        <rect key="frame" x="72" y="524" width="217.5" height="30"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="tDJ-28-EvC"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                        <nil key="textColor"/>
...
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="jne-Kf-n3i">
                                        <rect key="frame" x="0.0" y="648" width="361" height="31"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="Tui-RX-o4s"/>
                                        </constraints>
                                        <segments>
                                            <segment title="Chats"/>
                                            <segment title="Calls"/>
                                            <segment title="Users"/>
                                            <segment title="Groups"/>
                                            <segment title="Messages"/>
                                            <segment title="Info"/>
                                        </segments>
...
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="WXm-E4-7Ve">
                                        <rect key="frame" x="96" y="690" width="169" height="31"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="wfp-Ua-Rvu"/>
                                        </constraints>
                                        <segments>
                                            <segment title="FullScreen"/>
                                            <segment title="Popover"/>
                                        </segments>
                                    </segmentedControl>
                                </subviews>
                            </stackView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KrN-X4-9FH">
                                <rect key="frame" x="0.0" y="750" width="401" height="2"/>
...
                                <rect key="frame" x="0.0" y="752" width="401" height="50"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="FPK-YP-jIA"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
                                <state key="normal" title="Launch">
                                    <color key="titleColor" red="0.20000000000000001" green="0.59999999999999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <integer key="value" value="10"/>
                                    </userDefinedRuntimeAttribute>
...
