...
/* Class = "UILabel"; text = "Label"; ObjectID = "2xh-FS-zbc"; */
"2xh-FS-zbc.text" = "Label";

/* Class = "UIBarButtonItem"; title = "Item"; ObjectID = "4NT-ax-RBb"; */
"4NT-ax-RBb.title" = "Item";

/* Class = "UILabel"; text = "superhero1"; ObjectID = "4WR-9C-j0d"; */
"4WR-9C-j0d.text" = "superhero1";

/* Class = "UILabel"; text = "Offine"; ObjectID = "5Tt-Qt-yy0"; */
"5Tt-Qt-yy0.text" = "Offine";

/* Class = "UIButton"; normalTitle = "Create Group"; ObjectID = "8pP-mw-mld"; */
...
/* Class = "UILabel"; text = "superhero3"; ObjectID = "UqF-Or-2T5"; */
"UqF-Or-2T5.text" = "superhero3";

/* Class = "UITextField"; placeholder = "Enter Password"; ObjectID = "V2A-px-cA5"; */
"V2A-px-cA5.placeholder" = "Enter Password";

/* Class = "UIButton"; normalTitle = "Cancel"; ObjectID = "Y9c-vz-b5s"; */
"Y9c-vz-b5s.normalTitle" = "Cancel";

/* Class = "UITextField"; placeholder = "Enter Group Name"; ObjectID = "Ymg-3D-d7N"; */
"Ymg-3D-d7N.placeholder" = "Enter Group Name";

/* Class = "UILabel"; text = "Name"; ObjectID = "cag-eE-72x"; */
...
