...
"MODERATORS" = "Moderators";
"UPDATE_INFORMATION" = "Update Information";
"ARE_YOU_SURE_WANT_TO_UPDATE_USER_INFO" = "Are you sure you want to update the user information";
"UPDATE" = "Update";
"USER_NAME_CANNOT_EMPTY" = "User name cannot be empty";
"ENTER_YOUR_NAME" = "Enter your name";
"SEARCH" = "Search";
"NO_USERS_FOUND" = "No users found";
"ERROR" = "Error";
"NO_GROUPS_FOUND" = "No groups found";
"NO_CHATS_FOUND" = "No chats found";
"MEDIA_MESSAGE" = "Media Message";
"INCOMING_AUDIO_CALL" = "Incoming Audio Call";
...
