...
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <tableViewCell contentMode="scaleToFill" restorationIdentifier="CometChatConversationListItem" selectionStyle="default" indentationWidth="10" reuseIdentifier="CometChatConversationListItem" rowHeight="148" id="KGk-i7-Jjw" customClass="CometChatConversationListItem" customModule="CometChat_KitchenSink" customModuleProvider="target">
            <rect key="frame" x="0.0" y="0.0" width="534" height="148"/>
            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                <rect key="frame" x="0.0" y="0.0" width="534" height="148"/>
                <autoresizingMask key="autoresizingMask"/>
                <subviews>
...
